# moni2-ros-monitor-tool

./: .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  package.xml  setup.cfg  setup.py
launch/: moni2.launch.py  tester_nodes.launch.py
moni2/: moni2_node.py  node_info.py  param_update_node.py  resources.py  resources.qrc
moni2/gui/: __init__.py  config_handler.py  log_widget.py  node_detail_widget.py  node_dialog.py  node_item.py  node_model.py  node_widget.py  settings_dialog.py  settings_handler.py  window.py
resource/: example_config5.json
test/: test_config_handler.py  test_flake8.py  test_log_widget.py  test_node_dialog.py  test_node_info.py  test_node_item.py  test_node_model.py  test_settings_dialog.py  test_update_param_node.py  test_window.py
